unpackaged/main/default/objects/Resource_allocation__c/Resource_allocation__c.object-meta.xml
<CustomObject>
    <label>Resource allocation</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Resource allocation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resource allocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>