unpackaged/main/default/objects/Resource_allocation__c/fields/From_Date__c.field-meta.xml
<CustomField>
    <fullName>From_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>From Date</label>
    <type>Date</type>
</CustomField>