unpackaged/main/default/objects/Resource_allocation__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Project</label>
    <length>225</length>
    <type>Text</type>
</CustomField>