unpackaged/main/default/objects/Resource_allocation__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Task</label>
    <length>225</length>
    <type>Text</type>
</CustomField>